--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,10 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.6.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.22.0",
-    "axios": "^1.6.7"
+    "recharts": "^3.7.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
