--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,14 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@react-three/drei": "^10.7.7",
-    "@react-three/fiber": "^9.5.0",
+    "@react-three/drei": "9.88",
+    "@react-three/fiber": "^8.18.0",
     "axios": "^1.6.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.22.0",
     "recharts": "^3.7.0",
-    "three": "^0.182.0"
+    "three": "^0.160.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
