--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,38 +1,1 @@
-{
-  "name": "marketmind",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "@react-three/drei": "9.88",
-    "@react-three/fiber": "^8.18.0",
-    "axios": "^1.6.7",
-    "gsap": "^3.14.2",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-router-dom": "^6.22.0",
-    "recharts": "^3.7.0",
-    "three": "^0.160.1"
-  },
-  "devDependencies": {
-    "@eslint/js": "^9.17.0",
-    "@types/react": "^18.3.18",
-    "@types/react-dom": "^18.3.5",
-    "@vitejs/plugin-react": "^4.3.4",
-    "autoprefixer": "^10.4.18",
-    "eslint": "^9.17.0",
-    "eslint-plugin-react": "^7.37.2",
-    "eslint-plugin-react-hooks": "^5.0.0",
-    "eslint-plugin-react-refresh": "^0.4.16",
-    "globals": "^15.14.0",
-    "postcss": "^8.4.35",
-    "tailwindcss": "^3.4.1",
-    "vite": "^6.0.5"
-  }
-}
+{"name":"marketmind","private":true,"version":"0.0.0","type":"module","scripts":{"dev":"vite","build":"vite build","lint":"eslint .","preview":"vite preview"},"dependencies":{"@react-three/drei":"9.88","@react-three/fiber":"^8.18.0","axios":"^1.6.7","gsap":"^3.14.2","lucide-react":"^0.460.0","react":"^18.3.1","react-dom":"^18.3.1","react-router-dom":"^6.22.0","recharts":"^3.7.0","three":"^0.160.1"},"devDependencies":{"@eslint/js":"^9.17.0","@types/react":"^18.3.18","@types/react-dom":"^18.3.5","@vitejs/plugin-react":"^4.3.4","autoprefixer":"^10.4.18","eslint":"^9.17.0","eslint-plugin-react":"^7.37.2","eslint-plugin-react-hooks":"^5.0.0","eslint-plugin-react-refresh":"^0.4.16","globals":"^15.14.0","postcss":"^8.4.35","tailwindcss":"^3.4.1","vite":"^6.0.5"}}
